--- a/pixi.toml
+++ b/pixi.toml
@@ -9,6 +9,7 @@ platforms = ["linux-64"]
 python = "3.12.*"
 flask = ">=3.1.0,<4"
 gunicorn = "*"       # Add gunicorn
+reportlab = ">=4.4.1,<5"
 
 [pypi-dependencies]
 pymupdf = ">=1.25.2,<1.25.3"
